@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-856: Log amount of free memory on the command line (majakabiljo)
+
   GIRAPH-860: Giraph jobs can hang forever if HDFS filestamps aren't 
   created (aching)
 
